Iron Base Recipe Pressing
Made a iron base recipe that u can get with pressing a iron sheet

--- a/build.gradle
+++ b/build.gradle
@@ -95,6 +95,9 @@ dependencies {
     // And its provides the option to then use net.minecraft as the group, and one of; client, server or joined as the module name, plus the game version as version.
     // For all intends and purposes: You can treat this dependency as if it is a normal library you would use.
     implementation "net.neoforged:neoforge:${neo_version}"
+    implementation files("libs/Pixelmon-1.21.1-9.3.9-universal.jar")
+    implementation files("libs/create-1.21.1-6.0.6.jar")
+    implementation files("libs/jei-1.21.1-neoforge-19.21.2.313.jar")
 
     // Example optional mod dependency with JEI
     // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
